--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://IbrahimDeria.github.io/Personal-Portfolio",
+  "homepage": "https://ibrahimderia.github.io/Personal-Portfolio/",
   "name": "my-app",
   "version": "0.1.0",
   "private": false,
